# snd

./: Cargo.toml  README.md
src/: chat_list.rs  main.rs  status_codes.rs  xtui.rs
src/handlers/: handler.rs  multiline.rs  streamline.rs  xtui.rs
src/models/: chat.rs  mode.rs
