[package]
edition = "2021"
name = "snd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.27"
futures-util = "0.3.27"
tokio = {version = "1.26.0", features = ["full"]}
tokio-tungstenite = {version = "*", features = ["native-tls"]}
tungstenite = "0.18.0"
url = "2.3.1"
